Update lab1 to match new routes

--- a/Web/Lab1/Report.tex
+++ b/Web/Lab1/Report.tex
@@ -48,43 +48,43 @@
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.8\linewidth]{homepage}
+    \includegraphics[width=.8\linewidth]{../images/homepage}
     \caption{Домашняя страница}
     \label{fig:homepage}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.8\linewidth]{about}
+    \includegraphics[width=.8\linewidth]{../images/about}
     \caption{Страница "Обо мне"}
     \label{fig:about}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.8\linewidth]{interests}
+    \includegraphics[width=.8\linewidth]{../images/interests}
     \caption{Страница "Мои интересы"}
     \label{fig:interests}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.8\linewidth]{learning}
+    \includegraphics[width=.8\linewidth]{../images/learning}
     \caption{Страница "Учеба"}
     \label{fig:learning}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.8\linewidth]{photos}
+    \includegraphics[width=.8\linewidth]{../images/photos}
     \caption{Фотоальбом}
     \label{fig:photos}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.8\linewidth]{contact}
+    \includegraphics[width=.8\linewidth]{../images/contact}
     \caption{Страница "Контакт"}
     \label{fig:contact}
 \end{figure}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=.8\linewidth]{test}
+    \includegraphics[width=.8\linewidth]{../images/test}
     \caption{Страница "Тест"}
     \label{fig:test}
 \end{figure}
