--- a/Web/Lab2/Report.tex
+++ b/Web/Lab2/Report.tex
@@ -94,4 +94,7 @@ const photos = [
 В данной программе пути к фото хранятся в массиве \code{photos}.
 При загрузке страницы происходит вызов функции, которая в цикле
 добавляет фото в документ.
+
+\subsection{Страница \enquote{Мои интересы}}
+На данной странице 
 \end{document}
