--- a/Web/Lab2/Report.tex
+++ b/Web/Lab2/Report.tex
@@ -96,5 +96,76 @@ const photos = [
 добавляет фото в документ.
 
 \subsection{Страница \enquote{Мои интересы}}
-На данной странице 
+На данной странице функция \code{loadInterests} c переменным
+числом аргументов используется для выведения списков:
+\begin{lstlisting}
+window.onload = () => {
+    let links = document.getElementsByClassName('contents');
+    loadInterests(Object.keys(interests));
+};
+
+const loadInterests = (...interestsIds) => {
+    const interestsList = document.getElementById('interests');
+    interestsIds[0].forEach(interestId => {
+        const content = interests[interestId];
+        let interestWrapper = document.createElement('div');
+        interestWrapper.setAttribute('id', interestId);
+        interestWrapper.appendChild(createElement('h2', content.header));
+        interestWrapper.appendChild(createElement('p', content.values[0]));
+        interestWrapper.appendChild(createElement('p', content.values[1]));
+        interestsList.appendChild(interestWrapper);
+    });
+};
+
+const createElement = (tagName, content) => {
+    let element = document.createElement(tagName);
+    element.innerHTML = content;
+    return element;
+};
+
+const interestContent = `Lorem ipsum dolor sit amet, consecteturadipiscing elit. Sed gravida
+    dolor et ultricies placerat. Pellentesque in lectus at augue rutrum 
+    volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur 
+    fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
+    semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia 
+    vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
+    libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa 
+    sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet. 
+    Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque, 
+    faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
+    condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.`;
+
+const interests = {
+    'Hobbies': {
+        header: 'My hobbies',
+        values: [
+            'My hobbies are supposed to be here',
+            interestContent
+        ]
+    },
+    'Books': {
+        header: 'My books',
+        values: [
+            'My books are supposed to be here',
+            interestContent
+        ]
+    },
+    'Music': {
+        header: 'My music',
+        values: [
+            'My music is supposed to be here',
+            interestContent
+        ]
+    },
+    'Films': {
+        header: 'My films',
+        values: [
+            'My films are supposed to be here',
+            interestContent
+        ]
+    }
+};
+\end{lstlisting}
+
+Списки 
 \end{document}
