--- a/ТИПИС/Lab2/report.tex
+++ b/ТИПИС/Lab2/report.tex
@@ -64,62 +64,63 @@
 \section{Ход работы}
 Задание ограничений, функции плотности вероятности, функции определения
 начального момента порядка \code{s}, функции определения математического
-ожидания, график зависимости математического ожидания от размера выборки:
+ожидания, график зависимости математического ожидания от количества испытаний:
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{MO}
-    \caption{График зависимости математического ожидания от размера выборки}
+    \caption{График зависимости математического ожидания от количества испытаний}
 \end{figure}
 Функция определения центрального момента порядка \code{s}, дисперсии,
-график зависимости дисперсии от размера выборки:
+график зависимости дисперсии от количества испытаний:
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{Dispersion}
-    \caption{График зависимости дисперсии от размера выборки}
+    \caption{График зависимости дисперсии от количества испытаний}
 \end{figure}
 Функция определения среднеквадратического отклонения, график его заввисимости
-от размера выборки:
+от количества испытаний:
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{SD}
     \caption{График зависимости среднеквадратического отклонения
-    от размера выборки}
+    от количества испытаний}
 \end{figure}
 Функция определения коэффициента ассиметрии, график его зависимости
-от размера выборки:
+от количества испытаний:
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{Skewness}
     \caption{График зависимости коэффициента ассиметрии
-    от размера выборки}
+    от количества испытаний}
 \end{figure}
 Функция определения коэффициента эксцесса, график его зависимости
-от размера выборки:
+от количества испытаний:
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{Kurtosis}
     \caption{График зависимости коэффициента эксцесса
-    от размера выборки}
+    от количества испытаний}
 \end{figure}
 Графики зависимости функции распределения вероятностей от
-размера выборки:
+количества испытаний:
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{PDF}
     \caption{График зависимости функции плотности распределения
-    от размера выборки}
+    от количества испытаний}
 \end{figure}
-Графики интегральной функции распределения и энтропии:
+
+Графики зависимости энтропии от количества испытаний:
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{Entropy}
     \caption{График зависимости энтропии
-    от размера выборки}
+    от количества испытаний}
 \end{figure}
 \section*{Выводы}
 В ходе лабораторной работы было исследовано гипергеометрическое
 распределение и его числовые характеристики. Параметрами
-распределения являются: r - размер выборки, N - количество
+распределения являются: r - количество испытаний, N - количество
 предметов в выборке, m - количесво предметов с искомым признаком
 в выборке. Математическое ожидание зависит от всех параметров.
 \end{document}
