--- a/ТИПИС/Lab2/report.tex
+++ b/ТИПИС/Lab2/report.tex
@@ -109,7 +109,12 @@
     \caption{График зависимости функции плотности распределения
     от количества испытаний}
 \end{figure}
-
+График интегральной функции распределения:
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth]{Integral}
+    \caption{График интегральной функции распределения}
+\end{figure}
 Графики зависимости энтропии от количества испытаний:
 \begin{figure}[H]
     \centering
