Update title page

--- a/ТПО/Lab4/report.tex
+++ b/ТПО/Lab4/report.tex
@@ -1,11 +1,11 @@
 \documentclass[a4paper,14pt]{extarticle}
 \usepackage{../../tex-shared/preamble}
 
-\renewcommand{\mylabnumber}{2}
-\renewcommand{\mylabtitle}{Расчет числовых характеристик и 
-                           энтропии дискретной случайной величины}
-\renewcommand{\mysubject}{Теория информационных процессов и систем}
-\renewcommand{\mylecturer}{Заикина Е.Н.}
+\renewcommand{\mylabnumber}{4}
+\renewcommand{\mylabtitle}{Исследование способов интеграционного
+тестирования программного обеспечения}
+\renewcommand{\mysubject}{Тестирование ПО}
+\renewcommand{\mylecturer}{Тлуховская Н.П.}
 
 \begin{document}
 \input{../../tex-shared/title-page.tex}
