Fix chapter name

--- a/ТИПИС/Lab2/report.tex
+++ b/ТИПИС/Lab2/report.tex
@@ -16,7 +16,7 @@
           и энтропии дискретной случайной величины по ее закону распределения.
 \end{itemize}
 
-\section{Ход работы}
+\section{Задание на работу}
 \begin{enumerate}
     \item Получить у преподавателя вариант задания.
     \item Написать функцию, определяющую распределение вероятностей
