--- a/УД/Курсач/report.tex
+++ b/УД/Курсач/report.tex
@@ -1,5 +1,21 @@
 \documentclass[a4paper,14pt]{extarticle}
-\usepackage{../../../tex-shared/preamble}
+\usepackage{../../tex-shared/preamble}
 
 \begin{document}
+\section*{Введение}
+Курсовая работа по дисциплине \enquote{Управление данными}.
+В пределах данной курсовой работы будут отражены все этапы создания
+базы данных аэропорта, а также клиентского приложения, работающего
+на базе спроектированной базы данных. Клиентское приложение должно
+использоваться для автоматизации работы служащих аэропорта.
+
+\section{Аналитическая часть}
+Первоначальным этапом проектирования любой базы данных является
+анализ соответствующей предметной области. В данном разделе будут
+рассмотрены лишь постановка задачи и описание предметной области
+в таком виде, в каком ее представляет автор.
+
+\subsection{Анализ предметной области (концептуальное моделирование)}
+
+
 \end{document}
